# spectral

./: .gitignore  README.md  cogradio.sublime-project  spectral.sublime-project
doc/: cogradio.sublime-project
doc/Documentation/: Documentation.tex
doc/Documentation/generation/: generation.tex
doc/Documentation/multicoset_sampling/: multicoset_sampling.tex
doc/corrigendum/: corrigendum.tex
doc/defensie/: defensie.tex
doc/includes/: bibliography.bib  preamble.tex
doc/literature/: compressive.tex  literature.tex  multiband.tex  sensing.tex
doc/notulen/: 20_04_2015.md  todo.md
doc/poa/: poa.tex
doc/questionnaire/: questionnaire.tex
doc/review/: review.tex
doc/thesis/: thesis.synctex.gz(busy)  thesis.tex
doc/thesis_temp/: literature.tex  thesis.tex  tombeunsel.tex
examples/: cs_test_01.py  cs_test_l1.py  cs_test_l2.py  cs_test_l3.py  signal_test.py
src/: .gitignore  FFT_SNR.ipynb  README  README.md  Reconstruction_profiling.dmp  client.py  generate_thesis_profiling.py  jammer.py  naming_server.sh  non_mp_test.py  processes.py  profiling.py  run.py  run_server.py  server.sh  settings_server.py  setup.py  sparsity.py  tests.sh  tmp.mat  tmp.py  tmp2.mat  uml_generator.sh
src/cogradio/: __init__.py  helperfunctions.py  settings.py  sparseruler.py
src/cogradio_server/: server.py
src/cogradio_utils/: __init__.py  helperfunctions.py  settings.py  sparseruler.py
src/cogradio_vis/: __init__.py  helperfunctions.py
src/cogradio_web/: __init__.py  bower.json  content.py  element.py  elements.py  flaskr.py  websocket.py
src/doc/: Makefile  cogradio.detection.detector.rst  cogradio.detection.noise_power.rst  cogradio.detection.rst  cogradio.helperfunctions.rst  cogradio.reconstruction.crosscorr.rst  cogradio.reconstruction.reconstructor.rst  cogradio.reconstruction.rst  cogradio.reconstruction.wessel.rst  cogradio.rst  cogradio.sampling.collab_sampler.rst  cogradio.sampling.coprime.rst  cogradio.sampling.multicoset.rst  cogradio.sampling.rst  cogradio.sampling.sampling.rst  cogradio.source.complex_exponential.rst  cogradio.source.filesource.rst  cogradio.source.rect.rst  cogradio.source.rst  cogradio.source.simulatedsource.rst  cogradio.source.sinusoidal.rst  cogradio.source.source.rst  cogradio.source.usrp_n210.rst  cogradio.sparseruler.rst  conf.py  index.rst
src/gr/: flow_graph.grc  flow_graph_usrp.grc  flow_graph_usrp_tes.grc  flow_graph_usrp_test_2.grc  top_block.py  usb_psd.grc
src/gr-cogradio/: CMakeLists.txt
src/gr-cogradio/lib/: CMakeLists.txt  qa_cogradio.cc  qa_cogradio.h  test_cogradio.cc
src/spectral/: __init__.py
src/spectral_core/: helperfunctions.py
src/spectral_supervisor/: helperfunctions.py
src/tests/: cogradio_tests.py  helperfunctions_tests.py
(+404 files in other folders)
